# text-ingest

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  coverage.xml  fix_ipynb.py  pyproject.toml
.github/workflows/: ci.yml
.jules/: bolt.md
assets/: API_CONTRACT.md  ARCHITECTURE.md  GOVERNANCE.md  TESTING_AND_QUALITY.md
docs/: DOCUMENTATION.md  FETCHER_DOCS.md  LOW_MEMORY.md  OPEN_SOURCE_STANDARDS.md  OPERATIONS.md  RELEASE_PROCESS.md  SINK_DOCS.md  TODO.md
examples/: airflow_dag.py  airflow_user_heavy_lifting_dag.py  csv_export.py  csv_export_fuzzy.py  csv_export_yerstoday.py  dlt_source_ingestion.py  full_text_export.py  hidden_change_business_ideas.ipynb  industry_signal_intelligence_hashing.ipynb  industry_signal_intelligence_text_ingest.ipynb  industry_trend_search.py  lightweight_processing_visualization.ipynb  parquet_export.py  regular_processing_visualization.ipynb  spark_job.py  website_blog_export.py  yesterday_data_engineering_publications_summary.ipynb  yesterday_publications_summary.ipynb
scripts/: check_fetcher_docs.py  check_sink_docs.py
src/data_ingestion/: __init__.py  __main__.py  _version.py  analysis.py  analyze_cli.py  cli.py  config.py  exceptions.py  factories.py  full_text.py  http.py  logging_utils.py  models.py  pipeline.py  query_utils.py  rate_limit.py  registry.py  transforms.py
src/data_ingestion/adapters/: __init__.py  airflow.py  spark.py
src/data_ingestion/fetchers/: __init__.py  base.py  crossref.py  edgar.py  federal_register.py  github.py  googlenews.py  guardian.py  hackernews.py  newsapi.py  openalex.py  openlibrary.py  reddit.py  stackexchange.py  website.py  website_html.py  wikipedia.py
src/data_ingestion/sinks/: __init__.py  base.py  csv.py  full_text_jsonl.py  jsonl.py  parquet.py
tests/: conftest.py  test_adapters.py  test_analysis.py  test_analyze_cli.py  test_cli.py  test_config.py  test_crossref_fetcher.py  test_csv_sink.py  test_edgar_fetcher.py  test_federal_register_fetcher.py  test_fetcher_base_language.py  test_full_text.py  test_full_text_jsonl_sink.py  test_github_fetcher.py  test_googlenews_fetcher.py  test_guardian_fetcher.py  test_hackernews_fetcher.py  test_http.py  test_jsonl_sink.py  test_main_module.py  test_models.py  test_newsapi_fetcher.py  test_openalex_fetcher.py  test_openlibrary_fetcher.py  test_parquet_sink.py  test_pipeline.py  test_query_utils.py  test_rate_limit.py  test_reddit_fetcher.py  test_registry_factories.py  test_schema_consistency.py  test_spark_adapter.py  test_stackexchange_fetcher.py  test_stream_records.py  test_transforms.py  test_website_fetcher.py  test_website_html_fetcher.py  test_wikipedia_fetcher.py  test_yesterday_publications_notebook.py
