[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "text-ingest"
version = "0.3.0"
description = "Streaming multi-source text ingestion library with a unified output schema."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Daniil Miheev" }]
keywords = ["text-ingestion", "data-ingestion", "airflow", "spark", "etl", "jsonl"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "requests>=2.31.0,<3.0.0",
  "pydantic>=2.11.0,<3.0.0",
]

[project.optional-dependencies]
airflow = ["apache-airflow>=2.8,<3.0"]
spark   = ["pyspark>=3.5,<4.0"]
dev = [
  "build>=1.2,<2.0",
  "mypy>=1.15,<2.0",
  "pre-commit>=4.2,<5.0",
  "pytest>=8.3,<9.0",
  "pytest-cov>=5.0,<6.0",
  "pytest-randomly>=3.15,<4.0",
  "responses>=0.25,<1.0",
  "ruff>=0.11.0,<1.0",
  "types-requests>=2.31,<3.0",
  "pyarrow>=15.0.0,<16.0.0",
  "pypdf>=5.0.0,<6.0.0",
  "rapidfuzz>=3.0.0,<4.0.0",
]

[project.urls]
Homepage      = "https://github.com/example/massive-data-ingestion"
Repository    = "https://github.com/example/massive-data-ingestion"

[project.scripts]
mdi-run = "data_ingestion.cli:main"
mdi-analyze = "data_ingestion.analyze_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/data_ingestion"]

[tool.ruff]
line-length    = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "TCH", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["data_ingestion"]

[tool.mypy]
python_version        = "3.10"
warn_unused_configs   = true
warn_redundant_casts  = true
warn_unused_ignores   = true
strict                = true
disallow_any_generics = true
exclude               = ["^examples/"]

[[tool.mypy.overrides]]
module                 = ["airflow.*", "pyspark.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module                 = ["pyarrow", "pyarrow.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module                 = ["rapidfuzz", "rapidfuzz.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths  = ["tests"]
pythonpath = ["src"]
addopts    = "-q --tb=short"

[tool.coverage.run]
source = ["data_ingestion"]
branch = true

[tool.coverage.report]
show_missing  = true
skip_covered  = false
fail_under    = 80
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]
